@@ -1,4 +1,5 @@
 
+  * Resizeable track editor. Remembers last position and size
   * Added gapless play support
   * Saved in config the showed/hidden panels
   * Added support to m3u, pls, xspf radio playlists
